# crewai_extensions

./: .gitignore  EnhancedLoggingReadMe.md  INTEGRATION_GUIDE.md  LICENSE  README.md  pyproject.toml  setup.py
crewai_extensions/: __init__.py  agent_extensions.py  compatibility.py  crew_extensions.py  llm.py  llm_logging.py  llm_wrapper.py  logging_utils.py  streamlit_ui.py  task_extensions.py
crewai_extensions/pages/: chatbot.py  config.py  ollama_interface.py
