[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crewai_extensions"
version = "0.5.2"
description = "Extensions for CrewAI with enhanced LLM functionality"
readme = "README.md"
authors = [{name = "Wido Jansen", email = "widojansen@gmail.com"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "crewai",
    "litellm",
    "pydantic",
    "python-dotenv",
    "langchain",
    "streamlit",
    "psutil"
]
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/widojansen/crewai_extensions"
"Bug Tracker" = "https://github.com/widojansen/crewai_extensions/issues"
